Emmys OOH gallery: add arrow controls and reorder items (Hollywood first, RT 4th); wire JS for .photo-carousel-container

--- a/index.html
+++ b/index.html
@@ -6148,7 +6148,7 @@
                                     </div>
                                 </div>
                                 
-                            </div>
+                                        </div>
                         </div>
                     </div>
                     
@@ -6630,32 +6630,42 @@
                                     <div class="highlight-card"><h5>Coverage</h5><p>Hollywood, West Hollywood, Santa Monica, Downtown LA</p></div>
                                 </div>
                             </div>
-                            <!-- Horizontal scrolling photo gallery with click-through -->
-                            <div class="photo-carousel cs-section" style="display:flex;gap:16px;overflow-x:auto;scroll-snap-type:x mandatory;padding:8px 4px 12px;scrollbar-width:none;">
-                                <a class="photo-card-cs gallery-item" href="https://d3q27bh1u24u2o.cloudfront.net/news/2025-10/DIRECTV-Billboard-1.lsC9ariR.png" target="_blank" rel="noopener" data-src="https://d3q27bh1u24u2o.cloudfront.net/news/2025-10/DIRECTV-Billboard-1.lsC9ariR.png" data-title="OOH — Universal Search Billboard" data-caption="Billboard creative pairing the DIRECTV search bar with award‑season IP." style="min-width:360px;scroll-snap-align:start;">
-                                    <img src="https://d3q27bh1u24u2o.cloudfront.net/news/2025-10/DIRECTV-Billboard-1.lsC9ariR.png" alt="DIRECTV Universal Search Billboard" loading="lazy">
-                                    <div class="photo-caption-cs"><h5>OOH — Universal Search</h5><p>Billboard creative next to iconic titles.</p></div>
-                                </a>
-                                <a class="photo-card-cs gallery-item" href="Brand Imagery/Directv/OOH Hijack/Image 9-20-25 at 10.37 AM.jpg" target="_blank" rel="noopener" data-src="Brand Imagery/Directv/OOH Hijack/Image 9-20-25 at 10.37 AM.jpg" data-title="Digital — Rotten Tomatoes HPTO" data-caption="Homepage Takeover driving high CTRs and 1.6M+ impressions." style="min-width:360px;scroll-snap-align:start;">
-                                    <img src="Brand Imagery/Directv/OOH Hijack/Image 9-20-25 at 10.37 AM.jpg" alt="DIRECTV Rotten Tomatoes Homepage Takeover" loading="lazy">
-                                    <div class="photo-caption-cs"><h5>Digital — Rotten Tomatoes HPTO</h5><p>1.6M+ impressions and strong CTRs.</p></div>
-                                </a>
-                                <a class="photo-card-cs gallery-item" href="Brand Imagery/Directv/OOH Hijack/LA-48_DirectTV_9.16.2025-3.jpg" target="_blank" rel="noopener" data-src="Brand Imagery/Directv/OOH Hijack/LA-48_DirectTV_9.16.2025-3.jpg" data-title="Print OOH — Variant" data-caption="Alternate framing from Melrose / The Americana." style="min-width:360px;scroll-snap-align:start;">
-                                    <img src="Brand Imagery/Directv/OOH Hijack/LA-48_DirectTV_9.16.2025-3.jpg" alt="DIRECTV Emmys OOH Variant" loading="lazy">
-                                    <div class="photo-caption-cs"><h5>Print OOH — Variant</h5><p>Alternate framing from adjacent site.</p></div>
-                                </a>
-                                <a class="photo-card-cs gallery-item" href="https://d3q27bh1u24u2o.cloudfront.net/wysiwyg/news/2025-10/DIRECTV-3.kWa9h-I6.png" target="_blank" rel="noopener" data-src="https://d3q27bh1u24u2o.cloudfront.net/wysiwyg/news/2025-10/DIRECTV-3.kWa9h-I6.png" data-title="Hollywood — Takeover Creative" data-caption="Post‑Emmys placements across Hollywood and West Hollywood." style="min-width:360px;scroll-snap-align:start;">
-                                    <img src="https://d3q27bh1u24u2o.cloudfront.net/wysiwyg/news/2025-10/DIRECTV-3.kWa9h-I6.png" alt="DIRECTV Emmys OOH Creative 1" loading="lazy">
-                                    <div class="photo-caption-cs"><h5>Hollywood — Creative</h5><p>Post‑show placements across the city.</p></div>
-                                </a>
-                                <a class="photo-card-cs gallery-item" href="https://d3q27bh1u24u2o.cloudfront.net/wysiwyg/news/2025-10/DIRECTV-4.751JssoU.png" target="_blank" rel="noopener" data-src="https://d3q27bh1u24u2o.cloudfront.net/wysiwyg/news/2025-10/DIRECTV-4.751JssoU.png" data-title="Downtown — Takeover Creative" data-caption="Downtown and Santa Monica placements extending the moment." style="min-width:360px;scroll-snap-align:start;">
-                                    <img src="https://d3q27bh1u24u2o.cloudfront.net/wysiwyg/news/2025-10/DIRECTV-4.751JssoU.png" alt="DIRECTV Emmys OOH Creative 2" loading="lazy">
-                                    <div class="photo-caption-cs"><h5>Downtown — Creative</h5><p>Downtown and Westside coverage.</p></div>
-                                </a>
-                                <a class="photo-card-cs gallery-item" href="Brand Imagery/Directv/OOH Hijack/IMG_8899 2.jpg" target="_blank" rel="noopener" data-src="Brand Imagery/Directv/OOH Hijack/IMG_8899 2.jpg" data-title="Digital OOH — Projection" data-caption="Large‑format projection during Emmys night." style="min-width:360px;scroll-snap-align:start;">
-                                    <img src="Brand Imagery/Directv/OOH Hijack/IMG_8899 2.jpg" alt="DIRECTV Emmys Projection" loading="lazy">
-                                    <div class="photo-caption-cs"><h5>Digital OOH — Projection</h5><p>High‑scale moment capture.</p></div>
-                                </a>
+                            <!-- Horizontal scrolling photo gallery with arrows and click-through -->
+                            <div class="photo-carousel-container cs-section" style="position:relative;max-width:1200px;margin:0 auto;">
+                                <button class="pc-arrow left" aria-label="Previous" style="position:absolute;left:-8px;top:50%;transform:translateY(-50%);background:rgba(0,0,0,.6);color:#fff;border:none;border-radius:999px;width:40px;height:40px;display:flex;align-items:center;justify-content:center;z-index:2;cursor:pointer;">&#8592;</button>
+                                <div class="photo-carousel" style="display:flex;gap:16px;overflow-x:auto;scroll-snap-type:x mandatory;padding:8px 4px 12px;scrollbar-width:none;">
+                                    <!-- 1: was 4th (Hollywood Creative) -->
+                                    <a class="photo-card-cs gallery-item" href="https://d3q27bh1u24u2o.cloudfront.net/wysiwyg/news/2025-10/DIRECTV-3.kWa9h-I6.png" target="_blank" rel="noopener" data-src="https://d3q27bh1u24u2o.cloudfront.net/wysiwyg/news/2025-10/DIRECTV-3.kWa9h-I6.png" data-title="Hollywood — Takeover Creative" data-caption="Post‑Emmys placements across Hollywood and West Hollywood." style="min-width:360px;scroll-snap-align:start;">
+                                        <img src="https://d3q27bh1u24u2o.cloudfront.net/wysiwyg/news/2025-10/DIRECTV-3.kWa9h-I6.png" alt="DIRECTV Emmys OOH Creative 1" loading="lazy">
+                                        <div class="photo-caption-cs"><h5>Hollywood — Creative</h5><p>Post‑show placements across the city.</p></div>
+                                    </a>
+                                    <!-- 2: was 3rd (Print Variant) -->
+                                    <a class="photo-card-cs gallery-item" href="Brand Imagery/Directv/OOH Hijack/LA-48_DirectTV_9.16.2025-3.jpg" target="_blank" rel="noopener" data-src="Brand Imagery/Directv/OOH Hijack/LA-48_DirectTV_9.16.2025-3.jpg" data-title="Print OOH — Variant" data-caption="Alternate framing from Melrose / The Americana." style="min-width:360px;scroll-snap-align:start;">
+                                        <img src="Brand Imagery/Directv/OOH Hijack/LA-48_DirectTV_9.16.2025-3.jpg" alt="DIRECTV Emmys OOH Variant" loading="lazy">
+                                        <div class="photo-caption-cs"><h5>Print OOH — Variant</h5><p>Alternate framing from adjacent site.</p></div>
+                                    </a>
+                                    <!-- 3: was 1st (OOH Billboard) -->
+                                    <a class="photo-card-cs gallery-item" href="https://d3q27bh1u24u2o.cloudfront.net/news/2025-10/DIRECTV-Billboard-1.lsC9ariR.png" target="_blank" rel="noopener" data-src="https://d3q27bh1u24u2o.cloudfront.net/news/2025-10/DIRECTV-Billboard-1.lsC9ariR.png" data-title="OOH — Universal Search Billboard" data-caption="Billboard creative pairing the DIRECTV search bar with award‑season IP." style="min-width:360px;scroll-snap-align:start;">
+                                        <img src="https://d3q27bh1u24u2o.cloudfront.net/news/2025-10/DIRECTV-Billboard-1.lsC9ariR.png" alt="DIRECTV Universal Search Billboard" loading="lazy">
+                                        <div class="photo-caption-cs"><h5>OOH — Universal Search</h5><p>Billboard creative next to iconic titles.</p></div>
+                                    </a>
+                                    <!-- 4: Rotten Tomatoes HPTO -->
+                                    <a class="photo-card-cs gallery-item" href="Brand Imagery/Directv/OOH Hijack/Image 9-20-25 at 10.37 AM.jpg" target="_blank" rel="noopener" data-src="Brand Imagery/Directv/OOH Hijack/Image 9-20-25 at 10.37 AM.jpg" data-title="Digital — Rotten Tomatoes HPTO" data-caption="Homepage Takeover driving high CTRs and 1.6M+ impressions." style="min-width:360px;scroll-snap-align:start;">
+                                        <img src="Brand Imagery/Directv/OOH Hijack/Image 9-20-25 at 10.37 AM.jpg" alt="DIRECTV Rotten Tomatoes Homepage Takeover" loading="lazy">
+                                        <div class="photo-caption-cs"><h5>Digital — Rotten Tomatoes HPTO</h5><p>1.6M+ impressions and strong CTRs.</p></div>
+                                    </a>
+                                    <!-- 5: Downtown Creative -->
+                                    <a class="photo-card-cs gallery-item" href="https://d3q27bh1u24u2o.cloudfront.net/wysiwyg/news/2025-10/DIRECTV-4.751JssoU.png" target="_blank" rel="noopener" data-src="https://d3q27bh1u24u2o.cloudfront.net/wysiwyg/news/2025-10/DIRECTV-4.751JssoU.png" data-title="Downtown — Takeover Creative" data-caption="Downtown and Santa Monica placements extending the moment." style="min-width:360px;scroll-snap-align:start;">
+                                        <img src="https://d3q27bh1u24u2o.cloudfront.net/wysiwyg/news/2025-10/DIRECTV-4.751JssoU.png" alt="DIRECTV Emmys OOH Creative 2" loading="lazy">
+                                        <div class="photo-caption-cs"><h5>Downtown — Creative</h5><p>Downtown and Westside coverage.</p></div>
+                                    </a>
+                                    <!-- 6: Projection -->
+                                    <a class="photo-card-cs gallery-item" href="Brand Imagery/Directv/OOH Hijack/IMG_8899 2.jpg" target="_blank" rel="noopener" data-src="Brand Imagery/Directv/OOH Hijack/IMG_8899 2.jpg" data-title="Digital OOH — Projection" data-caption="Large‑format projection during Emmys night." style="min-width:360px;scroll-snap-align:start;">
+                                        <img src="Brand Imagery/Directv/OOH Hijack/IMG_8899 2.jpg" alt="DIRECTV Emmys Projection" loading="lazy">
+                                        <div class="photo-caption-cs"><h5>Digital OOH — Projection</h5><p>High‑scale moment capture.</p></div>
+                                    </a>
+                                </div>
+                                <button class="pc-arrow right" aria-label="Next" style="position:absolute;right:-8px;top:50%;transform:translateY(-50%);background:rgba(0,0,0,.6);color:#fff;border:none;border-radius:999px;width:40px;height:40px;display:flex;align-items:center;justify-content:center;z-index:2;cursor:pointer;">&#8594;</button>
                             </div>
                         </div>
                     </div>
@@ -7455,6 +7465,17 @@
                         carousel.scrollBy({ left: 320, behavior: 'smooth' });
                     });
                 }
+            });
+
+            // Photo carousel (Emmys OOH) arrows
+            document.querySelectorAll('.photo-carousel-container').forEach(container => {
+                const track = container.querySelector('.photo-carousel');
+                const prev = container.querySelector('.pc-arrow.left');
+                const next = container.querySelector('.pc-arrow.right');
+                if (!track) return;
+                const getStep = () => Math.max(320, Math.floor(track.clientWidth * 0.6));
+                if (prev) prev.addEventListener('click', () => track.scrollBy({ left: -getStep(), behavior: 'smooth' }));
+                if (next) next.addEventListener('click', () => track.scrollBy({ left: getStep(), behavior: 'smooth' }));
             });
 
             // About Me Photo Rotation
