--- a/index.html
+++ b/index.html
@@ -6646,7 +6646,49 @@
                 <div class="section-header">
                     <span class="section-subtitle">My Voice</span>
                     <h2 class="section-title">Dominate the Decade Podcast</h2>
+                    <div class="section-divider"></div>
                             </div>
+                
+                <!-- Podcast Catalog Cards -->
+                <div class="podcast-catalog" style="display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:16px;max-width:1100px;margin:16px auto 24px;">
+                    <a class="podcast-card card" href="#podcast-dtd">
+                        <div class="card-media" style="height:160px;overflow:hidden;border-top-left-radius:12px;border-top-right-radius:12px;background:#111;display:flex;align-items:center;justify-content:center;">
+                            <img src="Dominate The Decade/Hero Image.jpeg" alt="Dominate the Decade" style="width:100%;height:100%;object-fit:cover;">
+                        </div>
+                        <div class="card-content">
+                            <h4 class="card-title">Dominate the Decade</h4>
+                            <p class="small-text">Growth, culture, and building a meaningful decade.</p>
+                        </div>
+                    </a>
+                    <a class="podcast-card card" href="#" aria-disabled="true" onclick="return false;">
+                        <div class="card-media" style="height:160px;overflow:hidden;border-top-left-radius:12px;border-top-right-radius:12px;background:#0d1b2a;display:flex;align-items:center;justify-content:center;">
+                            <img src="Brand Imagery/Podcasts/Approachable-AI-Logo.png" alt="Approachable AI" style="max-height:120px;max-width:90%;object-fit:contain;"
+                                 onerror="this.style.display='none'; this.parentElement.querySelector('.podcast-card-fallback').style.display='flex';">
+                            <div class="podcast-card-fallback" style="display:none;width:100%;height:100%;align-items:center;justify-content:center;color:#9bd1ff;font-weight:700;">
+                                Approachable AI
+                            </div>
+                        </div>
+                        <div class="card-content">
+                            <h4 class="card-title">Approachable AI</h4>
+                            <p class="small-text">New show — practical AI, made human. Coming soon.</p>
+                        </div>
+                    </a>
+                    <a class="podcast-card card" href="#" aria-disabled="true" onclick="return false;">
+                        <div class="card-media" style="height:160px;overflow:hidden;border-top-left-radius:12px;border-top-right-radius:12px;background:#1a1033;display:flex;align-items:center;justify-content:center;">
+                            <img src="Brand Imagery/Podcasts/Curious-and-Creative-Logo.png" alt="Curious & Creative" style="max-height:120px;max-width:90%;object-fit:contain;"
+                                 onerror="this.style.display='none'; this.parentElement.querySelector('.podcast-card-fallback').style.display='flex';">
+                            <div class="podcast-card-fallback" style="display:none;width:100%;height:100%;align-items:center;justify-content:center;color:#e2b8ff;font-weight:700;">
+                                Curious & Creative
+                            </div>
+                        </div>
+                        <div class="card-content">
+                            <h4 class="card-title">Curious & Creative</h4>
+                            <p class="small-text">In partnership — curiosity meets craft. Coming soon.</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div id="podcast-dtd"></div>
                 <div class="dtde-hero" style="display:grid;gap:16px;grid-template-columns:1fr;max-width:900px;margin:0 auto 24px;">
                     <img src="Dominate The Decade/Hero Image.jpeg" alt="Dominate the Decade" style="width:100%;border-radius:12px;">
                     <img src="Dominate The Decade/The Guys.jpeg" alt="Podcast hosts" style="width:100%;border-radius:12px;">
