--- a/index.html
+++ b/index.html
@@ -6645,13 +6645,13 @@
             <div class="section-container">
                 <div class="section-header">
                     <span class="section-subtitle">My Voice</span>
-                    <h2 class="section-title">Dominate the Decade Podcast</h2>
+                    <h2 class="section-title">Podcasts</h2>
                     <div class="section-divider"></div>
                             </div>
                 
                 <!-- Podcast Catalog Cards -->
                 <div class="podcast-catalog" style="display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:16px;max-width:1100px;margin:16px auto 24px;">
-                    <a class="podcast-card card" href="#podcast-dtd">
+                    <a class="podcast-card card" href="#podcast-dtd" data-target="dtd">
                         <div class="card-media" style="height:160px;overflow:hidden;border-top-left-radius:12px;border-top-right-radius:12px;background:#111;display:flex;align-items:center;justify-content:center;">
                             <img src="Dominate The Decade/Hero Image.jpeg" alt="Dominate the Decade" style="width:100%;height:100%;object-fit:cover;">
                         </div>
@@ -6660,7 +6660,7 @@
                             <p class="small-text">Growth, culture, and building a meaningful decade.</p>
                         </div>
                     </a>
-                    <a class="podcast-card card" href="#" aria-disabled="true" onclick="return false;">
+                    <a class="podcast-card card" href="javascript:void(0)" data-target="approachable-ai">
                         <div class="card-media" style="height:160px;overflow:hidden;border-top-left-radius:12px;border-top-right-radius:12px;background:#0d1b2a;display:flex;align-items:center;justify-content:center;">
                             <img src="Brand Imagery/Podcasts/Approachable-AI-Logo.png" alt="Approachable AI" style="max-height:120px;max-width:90%;object-fit:contain;"
                                  onerror="this.style.display='none'; this.parentElement.querySelector('.podcast-card-fallback').style.display='flex';">
@@ -6673,7 +6673,7 @@
                             <p class="small-text">New show — practical AI, made human. Coming soon.</p>
                         </div>
                     </a>
-                    <a class="podcast-card card" href="#" aria-disabled="true" onclick="return false;">
+                    <a class="podcast-card card" href="javascript:void(0)" data-target="curious-creative">
                         <div class="card-media" style="height:160px;overflow:hidden;border-top-left-radius:12px;border-top-right-radius:12px;background:#1a1033;display:flex;align-items:center;justify-content:center;">
                             <img src="Brand Imagery/Podcasts/Curious-and-Creative-Logo.png" alt="Curious & Creative" style="max-height:120px;max-width:90%;object-fit:contain;"
                                  onerror="this.style.display='none'; this.parentElement.querySelector('.podcast-card-fallback').style.display='flex';">
@@ -6689,6 +6689,7 @@
                 </div>
 
                 <div id="podcast-dtd"></div>
+                <div id="dtdSection">
                 <div class="dtde-hero" style="display:grid;gap:16px;grid-template-columns:1fr;max-width:900px;margin:0 auto 24px;">
                     <img src="Dominate The Decade/Hero Image.jpeg" alt="Dominate the Decade" style="width:100%;border-radius:12px;">
                     <img src="Dominate The Decade/The Guys.jpeg" alt="Podcast hosts" style="width:100%;border-radius:12px;">
@@ -6739,6 +6740,16 @@
                             <div style="padding:8px 12px;display:flex;justify-content:space-between;align-items:center;">
                                 <span class="small-text">Crash Course</span>
                                 <a href="https://open.spotify.com/episode/40f1FtPaW2TMo5pxt5YdQG?si=lGC-1Ya_SCCqWFP-M3Ma8g" target="_blank" rel="noopener noreferrer" class="small-text">Open</a>
+                    </div>
+                </div>
+                <!-- Coming Soon placeholder (hidden by default) -->
+                <div id="podcastComingSoon" style="display:none;max-width:900px;margin:16px auto 24px;text-align:center;">
+                    <div style="border:1px solid rgba(255,255,255,0.08);background:rgba(255,255,255,0.03);padding:24px;border-radius:12px;">
+                        <div style="display:flex;align-items:center;justify-content:center;height:220px;background:#0f0f10;border-radius:10px;margin-bottom:16px;">
+                            <img id="podcastSoonLogo" src="" alt="Podcast Logo" style="max-height:180px;max-width:90%;object-fit:contain;">
+                        </div>
+                        <h4 id="podcastSoonTitle">Coming Soon</h4>
+                        <p id="podcastSoonDesc" class="small-text" style="opacity:.85">New show — details launching soon.</p>
                     </div>
                 </div>
                         <div class="ep-card" style="min-width:360px;flex:0 0 360px;background:var(--card-bg, #111);border-radius:12px;box-shadow:0 8px 24px rgba(0,0,0,.25);overflow:hidden;">
@@ -7487,6 +7498,55 @@
                 if (prev) prev.addEventListener('click', () => track.scrollBy({ left: -getStep(), behavior: 'smooth' }));
                 if (next) next.addEventListener('click', () => track.scrollBy({ left: getStep(), behavior: 'smooth' }));
             });
+
+            // Podcasts catalog interactions
+            (function(){
+                const catalog = document.querySelector('.podcast-catalog');
+                if (!catalog) return;
+                const dtdSection = document.getElementById('dtdSection');
+                const coming = document.getElementById('podcastComingSoon');
+                const logo = document.getElementById('podcastSoonLogo');
+                const title = document.getElementById('podcastSoonTitle');
+                const desc = document.getElementById('podcastSoonDesc');
+                const anchor = document.getElementById('podcast-dtd');
+
+                const meta = {
+                    'approachable-ai': {
+                        title: 'Approachable AI',
+                        logo: 'Brand Imagery/Podcasts/Approachable-AI-Logo.png',
+                        desc: 'Practical AI, made human. Conversations, demos, and workflows.'
+                    },
+                    'curious-creative': {
+                        title: 'Curious & Creative',
+                        logo: 'Brand Imagery/Podcasts/Curious-and-Creative-Logo.png',
+                        desc: 'In partnership — curiosity meets craft. Interviews and experiments.'
+                    }
+                };
+
+                catalog.querySelectorAll('.podcast-card').forEach(card => {
+                    card.addEventListener('click', (e) => {
+                        const target = card.getAttribute('data-target');
+                        if (target === 'dtd') {
+                            e.preventDefault();
+                            if (coming) coming.style.display = 'none';
+                            if (dtdSection) dtdSection.style.display = '';
+                            if (anchor) anchor.scrollIntoView({ behavior: 'smooth', block: 'start' });
+                            return false;
+                        }
+                        e.preventDefault();
+                        if (dtdSection) dtdSection.style.display = 'none';
+                        if (coming) {
+                            const m = meta[target] || {};
+                            if (logo) logo.src = m.logo || '';
+                            if (title) title.textContent = (m.title || 'Coming Soon');
+                            if (desc) desc.textContent = (m.desc || 'New show — details launching soon.');
+                            coming.style.display = 'block';
+                            coming.scrollIntoView({ behavior: 'smooth', block: 'start' });
+                        }
+                        return false;
+                    });
+                });
+            })();
 
             // About Me Photo Rotation
             const aboutPhotoSlider = document.querySelector('.about-photo-slider');
