--- a/index.html
+++ b/index.html
@@ -5378,7 +5378,7 @@
                     <li class="nav-item">
                         <a href="#podcast" class="nav-link" data-text="Podcast">
                             <span class="nav-num">04</span>
-                            <span class="nav-text">Podcast</span>
+                            <span class="nav-text">Podcasts</span>
                         </a>
                     </li>
                     <li class="nav-item">
@@ -5441,7 +5441,7 @@
                 <li class="mobile-nav-item" style="--i: 3;">
                     <a href="#podcast" class="mobile-nav-link">
                         <span class="mobile-nav-num">04</span>
-                        <span class="mobile-nav-text">Podcast</span>
+                        <span class="mobile-nav-text">Podcasts</span>
                     </a>
                 </li>
                 <li class="mobile-nav-item" style="--i: 4;">
@@ -6661,8 +6661,8 @@
                         </div>
                     </a>
                     <a class="podcast-card card" href="javascript:void(0)" data-target="approachable-ai">
-                        <div class="card-media" style="height:160px;overflow:hidden;border-top-left-radius:12px;border-top-right-radius:12px;background:#0d1b2a;display:flex;align-items:center;justify-content:center;">
-                            <img src="Brand Imagery/Podcasts/Approachable-AI-Logo.png" alt="Approachable AI" style="max-height:120px;max-width:90%;object-fit:contain;"
+                        <div class="card-media" style="height:160px;overflow:hidden;border-top-left-radius:12px;border-top-right-radius:12px;background:#fff;display:flex;align-items:center;justify-content:center;">
+                            <img src="" alt="Approachable AI" style="max-height:120px;max-width:90%;object-fit:contain;"
                                  onerror="this.style.display='none'; this.parentElement.querySelector('.podcast-card-fallback').style.display='flex';">
                             <div class="podcast-card-fallback" style="display:none;width:100%;height:100%;align-items:center;justify-content:center;color:#9bd1ff;font-weight:700;">
                                 Approachable AI
@@ -6674,8 +6674,8 @@
                         </div>
                     </a>
                     <a class="podcast-card card" href="javascript:void(0)" data-target="curious-creative">
-                        <div class="card-media" style="height:160px;overflow:hidden;border-top-left-radius:12px;border-top-right-radius:12px;background:#1a1033;display:flex;align-items:center;justify-content:center;">
-                            <img src="Brand Imagery/Podcasts/Curious-and-Creative-Logo.png" alt="Curious & Creative" style="max-height:120px;max-width:90%;object-fit:contain;"
+                        <div class="card-media" style="height:160px;overflow:hidden;border-top-left-radius:12px;border-top-right-radius:12px;background:#fff;display:flex;align-items:center;justify-content:center;">
+                            <img src="" alt="Curious & Creative" style="max-height:120px;max-width:90%;object-fit:contain;"
                                  onerror="this.style.display='none'; this.parentElement.querySelector('.podcast-card-fallback').style.display='flex';">
                             <div class="podcast-card-fallback" style="display:none;width:100%;height:100%;align-items:center;justify-content:center;color:#e2b8ff;font-weight:700;">
                                 Curious & Creative
@@ -6963,7 +6963,7 @@
                 <div class="footer-nav">
                     <h3>Navigation</h3>
                     <ul class="footer-links">
-                        <li><a href="#about-me">About Me</a></li><li><a href="#campaigns">Brand Work</a></li><li><a href="#photography">Photography</a></li><li><a href="#podcast">Podcast</a></li><li><a href="#contact">Contact</a></li>
+                        <li><a href="#about-me">About Me</a></li><li><a href="#campaigns">Brand Work</a></li><li><a href="#photography">Photography</a></li><li><a href="#podcast">Podcasts</a></li><li><a href="#contact">Contact</a></li>
                     </ul>
                 </div>
                 <div class="footer-contact">
@@ -7510,18 +7510,55 @@
                 const desc = document.getElementById('podcastSoonDesc');
                 const anchor = document.getElementById('podcast-dtd');
 
+                // Resolve logos even if extensions/paths differ
+                const logoCandidates = {
+                    'approachable-ai': [
+                        'Brand Imagery/Podcasts/Approachable-AI-Logo.png',
+                        'Brand Imagery/Podcasts/Approachable-AI-Logo.jpg',
+                        'Brand Imagery/Podcasts/Approachable AI Logo.png',
+                        'Brand Imagery/Podcasts/Approachable AI Logo.jpg'
+                    ],
+                    'curious-creative': [
+                        'Brand Imagery/Podcasts/Curious-and-Creative-Logo.png',
+                        'Brand Imagery/Podcasts/Curious-and-Creative-Logo.jpg',
+                        'Brand Imagery/Podcasts/Curious & Creative.png',
+                        'Brand Imagery/Podcasts/Curious & Creative.jpg'
+                    ]
+                };
+
+                function tryLoadSequential(srcs, done) {
+                    if (!srcs || !srcs.length) return done('');
+                    const src = srcs[0];
+                    const img = new Image();
+                    img.onload = () => done(src);
+                    img.onerror = () => tryLoadSequential(srcs.slice(1), done);
+                    img.src = src;
+                }
+
                 const meta = {
                     'approachable-ai': {
                         title: 'Approachable AI',
-                        logo: 'Brand Imagery/Podcasts/Approachable-AI-Logo.png',
+                        logo: '',
                         desc: 'Practical AI, made human. Conversations, demos, and workflows.'
                     },
                     'curious-creative': {
                         title: 'Curious & Creative',
-                        logo: 'Brand Imagery/Podcasts/Curious-and-Creative-Logo.png',
+                        logo: '',
                         desc: 'In partnership — curiosity meets craft. Interviews and experiments.'
                     }
                 };
+
+                // Initialize card logos
+                catalog.querySelectorAll('.podcast-card').forEach(card => {
+                    const key = card.getAttribute('data-target');
+                    if (!key || !logoCandidates[key]) return;
+                    const imgEl = card.querySelector('.card-media img');
+                    tryLoadSequential(logoCandidates[key], (src) => {
+                        if (imgEl && src) {
+                            imgEl.src = src;
+                        }
+                    });
+                });
 
                 catalog.querySelectorAll('.podcast-card').forEach(card => {
                     card.addEventListener('click', (e) => {
@@ -7537,7 +7574,10 @@
                         if (dtdSection) dtdSection.style.display = 'none';
                         if (coming) {
                             const m = meta[target] || {};
-                            if (logo) logo.src = m.logo || '';
+                            // Resolve coming-soon logo too
+                            tryLoadSequential(logoCandidates[target] || [], (src) => {
+                                if (logo) logo.src = src || '';
+                            });
                             if (title) title.textContent = (m.title || 'Coming Soon');
                             if (desc) desc.textContent = (m.desc || 'New show — details launching soon.');
                             coming.style.display = 'block';
